--- a/libevent/2.1.8/test/makefile
+++ b/libevent/2.1.8/test/makefile
@@ -1,6 +1,7 @@
 CC = g++
 
-OPT = -g --static -std=c++11
+# OPT = -g --static -std=c++11
+OPT = -g -std=c++11
 
 INCLUDES = -I./common -I../install/include
 
